--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 1s;
 
 }
 
@@ -20,6 +21,7 @@
     max-width: 62px;
     border-radius: 2px;
     cursor: pointer;
+    transition: background-color 1s, color 1s ;
 
 }
 
@@ -34,6 +36,30 @@
     font-size: 15px;
     cursor: pointer;
     margin-left: 8px;
-
+    transition: box-shadow 0.2s;
     
+}
+
+.subscribe_button:hover{
+    opacity: 0.8;
+}
+
+.suscribe_button:active{
+    opacity: 0.3;
+
+}
+
+.join_button:hover{
+    background-color: rgb(41, 118, 211);
+    color: white;
+}
+
+.join_button:active{
+    opacity: 0.7;
+
+}
+
+.tweet_button:hover{
+    box-shadow: 5px,5px,10px rgba (0,0,0,0.15);
+    opacity: 0.8;
 }
