--- a/Recreate Youtube/youtube.css
+++ b/Recreate Youtube/youtube.css
@@ -1,25 +1,61 @@
 .thumbnail{
-    width: 300px;
-    display: block;
+    width: 100%;
+    
 }
 
 .search_bar{
     display: block;
 }
 
-.video_preview{
-    width: 300px;
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 15px;
+p{
+    font-family: Roboto, Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+
+}
+
+.video_grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 16px;
+    row-gap: 40px;
+}
+
+
+.video_info_grid{
+    display: grid;
+    grid-template-columns: 50px 1fr;
 }
 
 .channel_picture{
-    display: inline-block;
-    width: 50px;
+    vertical-align: top;
 }
 
-.video_info {
-    display: inline-block;
-    width: 200px;
+.profile_picture{
+    width: 40px;
+    border-radius: 50px;
 }
+
+.video_heading{
+    margin-top: 0;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    margin-bottom: 12px;
+}
+
+.video_author{
+    font-size: 12px;
+    color:rgb(96, 96, 96) ;
+    margin-bottom: 4px;
+}
+
+.video_stats{
+    font-size: 12px;
+    color:rgb(96, 96, 96);
+}
+
+.thumbnail_row{
+    margin-bottom: 12px;
+}
+
