--- a/Recreate Youtube/Styles/header.css
+++ b/Recreate Youtube/Styles/header.css
@@ -31,6 +31,7 @@
 
 .search_bar{
     flex: 1;
+    width: 0;
     height: 36px;
     padding-left: 10px;
     border-width: 1px;
@@ -78,7 +79,33 @@
 }
 
 .right_section{
-    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-shrink: 0;
+    width: 180px;
+}
+
+.camera_icon{
+    height: 24px;
+
+}
+
+.youtube_apps{
+    height: 24px;
+
+}
+
+.notification_icon{
+    height: 24px;
+
+}
+
+.user_image{
+    height: 32px;
+    border-radius: 16px;
+    margin-right: 20px;
+
 }
 
 
