--- a/Recreate Youtube/Styles/header.css
+++ b/Recreate Youtube/Styles/header.css
@@ -3,6 +3,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .left_section{
