--- a/Recreate Youtube/Styles/header.css
+++ b/Recreate Youtube/Styles/header.css
@@ -4,10 +4,14 @@
     flex-direction: row;
     justify-content: space-between;
     position: fixed;
-    background-color: white;
     top: 0;
     left: 0;
     right: 0;
+
+    background-color: white;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: rgb(231, 231, 231);
 }
 
 .left_section{
