--- a/Recreate Youtube/Styles/header.css
+++ b/Recreate Youtube/Styles/header.css
@@ -7,6 +7,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
 
     background-color: white;
     border-bottom-width: 1px;
@@ -110,11 +111,30 @@
 
 }
 
-.user_image{
+.notification_box{
+    position: relative;
+}
+
+.notification_count{
+    position: absolute;
+    right: -5px;
+    top: -2px;
+    background-color: rgb(200, 0, 0);
+    color: white;
+    font-family: Roboto, Arial;
+    font-size: 11px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 10px;
+
+}
+
+.user_image {
     height: 32px;
     border-radius: 16px;
     margin-right: 20px;
-
 }
 
 
