--- a/Recreate Youtube/Styles/video.css
+++ b/Recreate Youtube/Styles/video.css
@@ -12,6 +12,20 @@
 
 .thumbnail_row{
     margin-bottom: 12px;
+    position: relative;
+}
+
+.video_time{
+    background-color: black;
+    color: white;
+    position:absolute;
+    right: 10px;
+    bottom: 10px;
+    font-family: Roboto, Arial;
+    font-size: 12px;
+    font-weight: bold;
+    padding:0;
+    border-radius: 2px;
 }
 
 .video_info_grid{
