--- a/Recreate Youtube/Styles/video.css
+++ b/Recreate Youtube/Styles/video.css
@@ -10,6 +10,21 @@
     row-gap: 40px;
 }
 
+@media (max-width: 501px) and (min-width:749) {
+    .video_grid {
+        grid-template-columns: 1fr 1fr;
+    } 
+} 
+
+@media (max-width: 500px){
+    .video_grid {
+        grid-template-columns: 1fr;
+    } 
+}
+
+
+
+
 .thumbnail_row{
     margin-bottom: 8px;
     position: relative;
@@ -60,6 +75,5 @@
     font-size: 12px;
     color:rgb(96, 96, 96);
 }
-
 
 
