Complete Media Queries

--- a/Recreate Youtube/Styles/video.css
+++ b/Recreate Youtube/Styles/video.css
@@ -10,15 +10,27 @@
     row-gap: 40px;
 }
 
-@media (max-width: 501px) and (min-width:749) {
+@media (width < 499px){
+    .video_grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (width > 500px){
     .video_grid {
         grid-template-columns: 1fr 1fr;
     } 
 } 
 
-@media (max-width: 500px){
+@media (width > 750px){
     .video_grid {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (width > 1000px){
+    .video_grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
     } 
 }
 
